Toevoegen van frameworks

--- a/les 2 - html en css/index.html
+++ b/les 2 - html en css/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Peter's Profile</title>
+    <title>Tim's Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
     <link
@@ -14,7 +14,7 @@
   <body>
     <div class="main-nav">
       <ul class="nav">
-        <li class="name">Peter Dedene</li>
+        <li class="name">Tim</li>
         <li><a href="#">Home</a></li>
         <li><a href="#">Experience</a></li>
         <li><a href="#">Photos</a></li>
