--- a/les 4 - opdracht/index.html
+++ b/les 4 - opdracht/index.html
@@ -66,7 +66,7 @@
     </header>
     <div id="main">
       <!-- Carousel -->
-      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <!-- <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -103,7 +103,7 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div>
+      </div> -->
 
       <!-- Text and image -->
       <section class="content-section">
