small change to bs-basis

--- a/les 4 - bootstrap basis/index.html
+++ b/les 4 - bootstrap basis/index.html
@@ -6,45 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Optional meta tags -->
-    <meta name="robots" content="index,follow" />
+    <!-- <meta name="robots" content="index,follow" />
     <link rel="canonical" href="URL" />
     <meta http-equiv="Expires" content="0" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Cache-Control" content="no-cache" />
     <meta http-equiv="imagetoolbar" content="no" />
-    <meta http-equiv="x-dns-prefetch-control" content="off" />
+    <meta http-equiv="x-dns-prefetch-control" content="off" /> -->
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" media="screen" type="text/css" />
+    <link rel="stylesheet" href="/css/custom_styles.css" media="screen" type="text/css" />
 
     <!-- Page title -->
     <title>Hello, world!</title>
 
     <!-- SEO tags -->
-    <meta name="description" content="SHORT_DESCRIPTION" />
+    <!-- <meta name="description" content="SHORT_DESCRIPTION" />
     <meta name="keywords" content="" />
     <meta name="author" content="NAME" />
     <meta name="subject" content="WEBSITE PAGE SUBJECT" />
     <meta name="copyright" content="COPYRIGHT_HOLDERS" />
     <meta name="revised" content="REVISION_DATE" />
     <meta name="Classification" content="Business" />
-    <meta name="url" content="URL" />
+    <meta name="url" content="URL" /> -->
 
     <!-- Twitter Card data https://dev.twitter.com/cards/overview -->
-    <meta name="twitter:card" content="summary" />
+    <!-- <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@TWITTER_ID" />
     <meta name="twitter:title" content="TITLE" />
     <meta name="twitter:description" content="DESCRIPTION" />
     <meta name="twitter:creator" content="@CREATOR" />
-    <meta name="twitter:image" content="IMAGE_FOR_TWITTER_CARD" />
+    <meta name="twitter:image" content="IMAGE_FOR_TWITTER_CARD" /> -->
 
     <!-- Open Graph data http://ogp.me/ -->
-    <meta property="og:title" content="TITLE" />
+    <!-- <meta property="og:title" content="TITLE" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="url" />
     <meta property="og:image" content="IMAGE_TO_USE" />
     <meta property="og:description" content="DESCRIPTION" />
-    <meta property="og:site_name" content="SITE_NAME" />
+    <meta property="og:site_name" content="SITE_NAME" /> -->
   </head>
 
   <body>
