--- a/les 4 - bootstrap basis/pong.html
+++ b/les 4 - bootstrap basis/pong.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
   <body>
     <h1>Pong</h1>
+    <a href="/">Home</a>
     <a href="ping.html">Ping!</a>
   </body>
 </html>
