--- a/les 4 - bootstrap basis/ping.html
+++ b/les 4 - bootstrap basis/ping.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
   <body>
     <h1>Ping</h1>
+    <a href="/">Home</a>
     <a href="pong.html">Pong!</a>
   </body>
 </html>
