--- a/les 4 - bootstrap basis/index.html
+++ b/les 4 - bootstrap basis/index.html
@@ -49,7 +49,7 @@
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <h1><span>H</span><span>e</span><span>l</span><span>l</span><span>o</span><span>!</span></h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
