--- a/les 4/les 4 - bootstrap basis/index.html
+++ b/les 4/les 4 - bootstrap basis/index.html
@@ -49,7 +49,19 @@
   </head>
 
   <body>
-    <h1><span>H</span><span>e</span><span>l</span><span>l</span><span>o</span><span>!</span></h1>
+    <header class="header">
+      <div class="container">
+        <div class="row justify-content-between">
+          <a href="/" class="logo">
+            <img src="//www.fillmurray.com/300/100" alt="Logo" />
+          </a>
+          <nav class="top-nav">
+            <a href="/">Home</a>
+            <a href="/ping.html">Ping</a>
+          </nav>
+        </div>
+      </div>
+    </header>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
